--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Louis Peng <navy90517@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "d3-ease": "^1.0.6",
     "gatsby": "^2.24.2",
     "gatsby-image": "^2.4.13",
