--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "author": "Louis Peng <navy90517@gmail.com>",
   "dependencies": {
     "@emotion/core": "^10.0.28",
-    "d3-ease": "^1.0.6",
     "gatsby": "^2.24.2",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-manifest": "^2.4.18",
@@ -21,7 +20,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-spring": "^8.0.27"
+    "react-intersection-observer": "^8.26.2"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
