--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "Louis Peng <navy90517@gmail.com>",
   "dependencies": {
     "@emotion/core": "^10.0.28",
+    "@reach/router": "^1.3.4",
     "gatsby": "^2.24.2",
     "gatsby-image": "^2.4.13",
+    "gatsby-plugin-layout": "^1.3.10",
     "gatsby-plugin-manifest": "^2.4.18",
     "gatsby-plugin-offline": "^3.2.17",
     "gatsby-plugin-react-helmet": "^3.3.10",
@@ -20,7 +22,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-intersection-observer": "^8.26.2"
+    "react-intersection-observer": "^8.26.2",
+    "react-pose": "^4.0.10",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
